--- a/apps/www/src/components/ComponentSource.astro
+++ b/apps/www/src/components/ComponentSource.astro
@@ -24,5 +24,5 @@ const highlightedCode = await highlightCode(code, lang)
 ---
 
 <div class="relative">
-  <ComponentCode name={name} src={path} title={title} language={lang} highlightedCode={highlightedCode} />
+  <ComponentCode title={title} language={lang} highlightedCode={highlightedCode} code={code} />
 </div>
