feat(www): add tabs into mdx-components

--- a/apps/www/src/components/ui/tabs/TabsList.astro
+++ b/apps/www/src/components/ui/tabs/TabsList.astro
@@ -2,7 +2,7 @@
 import { cn } from "@/lib/utils";
 import type { HTMLAttributes } from "astro/types";
 
-type Props = Omit<HTMLAttributes<"div">, "role">;
+export type Props = Omit<HTMLAttributes<"div">, "role">;
 
 const { class: className, ...rest } = Astro.props;
 ---
