--- a/apps/www/src/components/ui/tabs/Tabs.astro
+++ b/apps/www/src/components/ui/tabs/Tabs.astro
@@ -2,7 +2,7 @@
 import { cn } from "@/lib/utils";
 import type { HTMLAttributes } from "astro/types";
 
-interface Props extends HTMLAttributes<"div"> {
+export interface Props extends HTMLAttributes<"div"> {
   defaultValue?: string;
   syncKey?: string;
 }
