--- a/apps/www/src/components/ui/tabs/TabsContent.astro
+++ b/apps/www/src/components/ui/tabs/TabsContent.astro
@@ -3,7 +3,7 @@ import { cn } from "@/lib/utils";
 import type { HTMLAttributes } from "astro/types";
 
 
-interface Props extends Omit<HTMLAttributes<"div">, "id" | "role" | "tabindex" | "hidden"> {
+export interface Props extends Omit<HTMLAttributes<"div">, "id" | "role" | "tabindex" | "hidden"> {
   value: string;
 }
 
