--- a/apps/www/src/components/ui/tabs/TabsTrigger.astro
+++ b/apps/www/src/components/ui/tabs/TabsTrigger.astro
@@ -2,7 +2,7 @@
 import { cn } from "@/lib/utils";
 import type { HTMLAttributes } from "astro/types";
 
-interface Props extends Omit<HTMLAttributes<"button">, "type" | "id" | "role"> {
+export interface Props extends Omit<HTMLAttributes<"button">, "type" | "id" | "role"> {
   value: string;
 }
 
