--- a/apps/www/src/mdx-components/components/tabs/Tabs.astro
+++ b/apps/www/src/mdx-components/components/tabs/Tabs.astro
@@ -6,4 +6,6 @@ import { cn } from '@/lib/utils'
 const { class: className, ...rest } = Astro.props
 ---
 
-<ComponentTabs class={cn('relative mt-6 w-full', className)} {...rest} />
+<ComponentTabs class={cn('relative mt-6 w-full', className)} {...rest}>
+  <slot />
+</ComponentTabs>
