--- a/apps/www/src/mdx-components/components/tabs/TabsContent.astro
+++ b/apps/www/src/mdx-components/components/tabs/TabsContent.astro
@@ -6,4 +6,6 @@ import { cn } from '@/lib/utils'
 const { class: className, ...rest } = Astro.props
 ---
 
-<ComponentTabs class={cn('relative [&_h3.font-heading]:text-base [&_h3.font-heading]:font-medium *:[figure]:first:mt-0 [&>.steps]:mt-6', className)} {...rest} />
+<ComponentTabs class={cn('relative [&_h3.font-heading]:text-base [&_h3.font-heading]:font-medium *:[figure]:first:mt-0 [&>.steps]:mt-6', className)} {...rest}>
+  <slot />
+</ComponentTabs>
