fix(www): heading title

--- a/apps/www/src/components/page-header/PageHeaderHeading.astro
+++ b/apps/www/src/components/page-header/PageHeaderHeading.astro
@@ -9,7 +9,7 @@ const { class: className, ...props } = Astro.props
 
 <h1
   class={cn(
-    'text-primary leading-tighter max-w-2xl text-4xl font-semibold tracking-tight text-balance lg:leading-[1.1] lg:font-semibold xl:text-5xl xl:tracking-tighter',
+    'text-primary leading-tighter text-4xl font-semibold tracking-tight text-balance lg:leading-[1.1] lg:font-semibold xl:text-5xl xl:tracking-tighter max-w-4xl',
     className,
   )}
   {...props}
