--- a/apps/www/src/components/ComponentPreviewTabs.astro
+++ b/apps/www/src/components/ComponentPreviewTabs.astro
@@ -1,33 +1,42 @@
 ---
+import { cn } from '@/lib/utils'
 import { ComponentPreviewWrapper } from './_component-preview-wrapper'
-import ComponentSource from './ComponentSource.astro';
-import { Tabs, TabsList, TabsTrigger, TabsContent } from "./ui/tabs";
+import ComponentSource from './ComponentSource.astro'
+import { Tabs, TabsList, TabsTrigger, TabsContent } from './ui/tabs'
+import type { HTMLAttributes } from 'astro/types'
 
-export interface Props {
+export interface Props extends HTMLAttributes<'div'> {
   name: string
-  align?: "center" | "start" | "end"
+  align?: 'center' | 'start' | 'end'
 }
 
-const { name, align = "center", } = Astro.props
-
+const { name, align = 'center', class: className } = Astro.props
 ---
 
-<div class="group relative mt-4 mb-12 flex flex-col gap-2">
+<div class={cn('group relative mt-4 mb-12 flex flex-col gap-2', className)}>
   <Tabs class="relative mr-auto w-full">
     <div class="flex items-center justify-between">
       <TabsList class="justify-start gap-4 rounded-none bg-transparent px-2 md:px-0">
-        <TabsTrigger value="preview" class="text-muted-foreground data-[state=active]:text-foreground px-0 text-base data-[state=active]:shadow-none dark:data-[state=active]:border-transparent dark:data-[state=active]:bg-transparent">Preview</TabsTrigger>
-        <TabsTrigger value="code" class="text-muted-foreground data-[state=active]:text-foreground px-0 text-base data-[state=active]:shadow-none dark:data-[state=active]:border-transparent dark:data-[state=active]:bg-transparent">Code</TabsTrigger>
+        <TabsTrigger
+          value="preview"
+          class="text-muted-foreground data-[state=active]:text-foreground px-0 text-base data-[state=active]:shadow-none dark:data-[state=active]:border-transparent dark:data-[state=active]:bg-transparent"
+        >
+          Preview
+        </TabsTrigger>
+        <TabsTrigger
+          value="code"
+          class="text-muted-foreground data-[state=active]:text-foreground px-0 text-base data-[state=active]:shadow-none dark:data-[state=active]:border-transparent dark:data-[state=active]:bg-transparent"
+        >
+          Code
+        </TabsTrigger>
       </TabsList>
     </div>
     <div class="relative rounded-lg border md:-mx-1">
       <TabsContent value="preview">
-        <div data-align={align} class="preview flex h-[450px] w-full justify-center p-10 data-[align=center]:items-center data-[align=end]:items-end data-[align=start]:items-start">
-          <ComponentPreviewWrapper {...{name}} client:visible />
-        </div>
+        <ComponentPreviewWrapper {...{ name, align, class: Astro.props.class }} client:visible />
       </TabsContent>
       <TabsContent value="code" class="border-code **:[figure]:!m-0 **:[pre]:h-[450px]">
-          <ComponentSource {...{name, collapsible:false}} />
+        <ComponentSource {...{ name, collapsible: false }} />
       </TabsContent>
     </div>
   </Tabs>
