--- a/apps/v4/src/styles/global.css
+++ b/apps/v4/src/styles/global.css
@@ -7,7 +7,7 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
-@custom-variant dark (&:is(.dark *));
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 @custom-variant fixed (&:is(.layout-fixed *));
 
@@ -104,7 +104,7 @@
   --selection-foreground: oklch(1 0 0);
 }
 
-.dark {
+[data-theme='dark'] {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
