--- a/apps/v4/src/components/ComponentsList.astro
+++ b/apps/v4/src/components/ComponentsList.astro
@@ -7,7 +7,7 @@ const list = (await getCollection('docs')).filter(item => item.id.includes('comp
 
 <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 md:gap-x-8 lg:gap-x-16 lg:gap-y-6 xl:gap-x-20">
   {list.map((component) => (
-    <a href={`${component.id}`} class="text-lg font-medium underline-offset-4 hover:underline md:text-base">
+    <a href={`/${component.id}`} class="text-lg font-medium underline-offset-4 hover:underline md:text-base">
       {component.data.title}
     </a>
   ))}
