--- a/apps/v4/src/components/starlight/Search.astro
+++ b/apps/v4/src/components/starlight/Search.astro
@@ -225,7 +225,7 @@ if (project.trailingSlash === 'never') dataAttributes['data-strip-trailing-slash
       --sl-search-cancel-space: 5rem;
     }
 
-    :root[data-theme='light'] #starlight__search {
+    .dark #starlight__search {
       --pagefind-ui-tag: var(--sl-color-gray-6);
     }
 
