--- a/apps/v4/src/components/starlight/MarkdownContent.astro
+++ b/apps/v4/src/components/starlight/MarkdownContent.astro
@@ -1,3 +1,11 @@
+---
+import { mdxComponents } from '@/mdx-components'
+import { render } from 'astro:content'
+
+const { entry } = Astro.locals.starlightRoute
+const { Content } = await render(entry)
+---
+
 <div class="w-full flex-1 *:data-[slot=alert]:first:mt-0">
-  <slot />
+  <Content frontmatter={entry.data} components={mdxComponents} />
 </div>
