feat: enhance component functionality and improve documentation

--- a/apps/v4/src/mdx-components/components/code.astro
+++ b/apps/v4/src/mdx-components/components/code.astro
@@ -30,7 +30,7 @@ const isPlain = isPlainText(children)
 const isNpmCommand = __npm__ && __yarn__ && __pnpm__ && __bun__ && !isPlain
 ---
 
-{
+ {
   isPlain && (
     <code
       class={cn('bg-muted relative rounded-md px-[0.3rem] py-[0.2rem] font-mono text-[0.8rem] outline-none', className)}
@@ -47,7 +47,7 @@ const isNpmCommand = __npm__ && __yarn__ && __pnpm__ && __bun__ && !isPlain
 {
   !isPlain && !isNpmCommand && (
     <>
-      {__raw__ && <CopyButton value={__raw__} src={__src__} client:visible />}
+      {/* {__raw__ && <CopyButton value={__raw__} client:visible />} */}
       <code {...props}><slot /></code>
     </>
   )
