--- a/apps/v4/src/mdx-components/components/H4.astro
+++ b/apps/v4/src/mdx-components/components/H4.astro
@@ -7,6 +7,6 @@ export type Props = HTMLAttributes<'h4'>
 const { class: className, ...props } = Astro.props
 ---
 
-<h4 class={cn('font-heading mt-8 scroll-m-28 text-lg font-medium tracking-tight', className)} {...props}>
+<h4 class={cn('font-heading mt-8 scroll-m-28 text-base font-medium tracking-tight', className)} {...props}>
   <slot />
 </h4>
