--- a/apps/v4/src/mdx-components/components/H2.astro
+++ b/apps/v4/src/mdx-components/components/H2.astro
@@ -9,7 +9,7 @@ const { class: className, ...props } = Astro.props
 
 <h2
   class={cn(
-    'font-heading mt-12 scroll-m-28 text-2xl font-medium tracking-tight first:mt-0 lg:mt-20 [&+p]:!mt-4 *:[code]:text-2xl',
+    'font-heading mt-8 scroll-m-28 text-xl font-medium tracking-tight first:mt-0 lg:mt-8 [&+p]:!mt-4 *:[code]:text-xl',
     className,
   )}
   {...props}
