--- a/apps/v4/src/mdx-components/components/code.astro
+++ b/apps/v4/src/mdx-components/components/code.astro
@@ -33,7 +33,7 @@ const isNpmCommand = __npm__ && __yarn__ && __pnpm__ && __bun__ && !isPlain
  {
   isPlain && (
     <code
-      class={cn('bg-muted relative rounded-md px-[0.3rem] py-[0.2rem] font-mono text-[0.8rem] outline-none', className)}
+      class={cn('bg-muted relative rounded-md px-[0.3rem] py-[0.2rem] font-mono text-[0.8rem] break-words outline-none', className)}
     ><slot /></code>
   )
 }
