--- a/apps/v4/src/styles/global.css
+++ b/apps/v4/src/styles/global.css
@@ -14,8 +14,9 @@
 @theme inline {
   --breakpoint-3xl: 1600px;
   --breakpoint-4xl: 2000px;
-  --font-sans: var(--font-sans);
-  --font-mono: var(--font-mono);
+  --font-sans: var(--font-sans-geist);
+  --font-mono: var(--font-mono-geist);
+  --font-inter: var(--font-inter-var);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
