--- a/apps/v4/src/components/ComponentsList.astro
+++ b/apps/v4/src/components/ComponentsList.astro
@@ -1,8 +1,9 @@
 ---
 import { getCollection } from 'astro:content'
 
-const list = (await getCollection('docs')).filter(item => item.id.includes('components') && item.id !== 'docs/components')
-
+const list = await getCollection('docs', ({id}) => {
+  return id.includes('docs/components/')
+})
 ---
 
 <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 md:gap-x-8 lg:gap-x-16 lg:gap-y-6 xl:gap-x-20">
